# rovi_final

./: .gitignore  README.md  README.txt  robwork-release-0.7.0.cfg.xml  rwsettings.xml
robotics/: lol
robotics/PA10WorkCell/: CollisionSetup.xml  ScenePA10RoVi1.wc.xml  ScenePA10RoVi1.wc.xml~
robotics/PA10WorkCell/PA10/: CollisionSetup.xml  pa10.xml
robotics/SamplePluginPA10/: CMakeLists.txt
robotics/SamplePluginPA10/data/: data_plots.m  data_plots.m~  example.txt  joint_positions.txt  joint_positions_0.000121.txt  joint_positions_0.000243.txt  joint_positions_0.000485.txt  joint_positions_0.000970.txt  joint_positions_0.015625.txt  joint_positions_0.031250.txt  joint_positions_0.046940.txt  joint_positions_0.050000.txt  joint_positions_0.100000.txt  joint_positions_0.450000.txt  joint_positions_0.850000.txt  joint_positions_0.900000.txt  joint_positions_0.950000.txt  joint_positions_1.000000.txt  new_points.fig  tool_positions.txt  tool_positions_0.000121.txt  tool_positions_0.000243.txt  tool_positions_0.000485.txt  tool_positions_0.000970.txt  tool_positions_0.015625.txt  tool_positions_0.046940.txt  tool_positions_0.050000.txt  tool_positions_0.100000.txt  tool_positions_0.450000.txt  (+8 more)
vision/: CMakeLists.txt  Makefile  color_detector.cpp  color_detector.h  general_functions.cpp  general_functions.h  line_detector.cpp  main.cpp  setup.h  tmp.cpp  tracker
vision/header_files/: color_detector.h  corny_detector.h  setup.h
vision/old/: line_detector.cpp  old_stuff.txt
vision/source_files/: color_detector.cpp  corny_detector.cpp  general_functions.cpp  main.cpp
(+112 files in other folders)
